[package]
name = "typst-docs"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
doctest = false
bench = false

[dependencies]
typst = { path = "../typst" }
typst-library = { path = "../typst-library" }
comemo = "0.3"
ecow = { version = "0.2", features = ["serde"] }
heck = "0.4"
include_dir = "0.7"
once_cell = "1"
pulldown-cmark = "0.9"
serde = { version = "1.0.184", features = ["derive"] }
serde_yaml = "0.9"
syntect = { version = "5", default-features = false, features = ["parsing", "html", "regex-fancy"] }
typed-arena = "2"
unicode_names2 = "0.6.0"
unscanny = "0.1"
yaml-front-matter = "0.1"
