[package]
name = "typst-docs"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
doctest = false
bench = false

[dependencies]
typst = { workspace = true }
comemo = { workspace = true }
ecow = { workspace = true }
heck = { workspace = true }
include_dir = { workspace = true }
once_cell = { workspace = true }
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
syntect = { workspace = true, features = ["html"] }
typed-arena = { workspace = true }
unicode_names2 = { workspace = true }
unscanny = { workspace = true }
yaml-front-matter = { workspace = true }

[lints]
workspace = true
