[package]
name = "typst-kit"
description = "Common utilities for Typst tooling."
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
typst-assets = { workspace = true, optional = true }
typst-library = { workspace = true }
typst-syntax = { workspace = true }
typst-timing = { workspace = true }
typst-utils = { workspace = true }
codespan-reporting = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
ecow = { workspace = true }
env_proxy = { workspace = true, optional = true }
fastrand = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
fontdb = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
same-file = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true, optional = true }
tiny_http = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }

# Explicitly depend on OpenSSL if applicable, so that we can add the
# `openssl/vendored` feature to it if `vendor-openssl` is enabled.
[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios", target_os = "watchos", target_os = "tvos")))'.dependencies]
openssl = { workspace = true, optional = true }

[features]
default = []

# Enables loading of embedded fonts via `fonts::embedded`.
embedded-fonts = ["dep:typst-assets", "typst-assets/fonts"]

# Enables font discovery at paths and from the system via `fonts::scan` and
# `fonts::system`.
scan-fonts = ["dep:fontdb", "fontdb/memmap", "fontdb/fontconfig"]

# Enables loading of files from standard locations via `files::SystemFiles`.
system-files = ["system-packages"]

# Enables loading of packages from standard locations via
# `packages::SystemPackages`.
system-packages = ["dep:dirs", "universe-packages"]

# Enables loading of packages from Typst Universe via
# `packages::UniversePackages`.
universe-packages = ["dep:flate2", "dep:tar", "dep:fastrand"]

# Enables emitting terminal-style diagnostics via `diagnostics::emit`.
emit-diagnostics = ["dep:codespan-reporting"]

# Enables network requests via `downloader::SystemDownloader`.
system-downloader = ["dep:env_proxy", "dep:native-tls", "dep:ureq", "dep:openssl"]

# Enables file system watching via `watcher::Watcher`.
watcher = ["dep:notify", "dep:same-file"]

# Enables live-reloading HTTP serving via `server::HttpServer`.
http-server = ["dep:tiny_http"]

# Whether to vendor OpenSSL for the `system-downloader`. Not applicable to
# Windows and macOS build.
vendor-openssl = ["openssl/vendored"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
