[package]
name = "typst-library"
description = "The standard library for Typst."
categories = ["compilers", "science"]
keywords = ["typst"]
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
test = false
doctest = false
bench = false

[dependencies]
typst = { path = "../typst" }
az = "1.2"
chinese-number = { version = "0.7.2", default-features = false, features = ["number-to-chinese"] }
comemo = "0.3"
csv = "1"
ecow = { version = "0.2", features = ["serde"] }
hayagriva = "0.3.2"
hypher = "0.1.4"
icu_properties = { version = "1.2.0", features = ["serde"] }
icu_provider = { version = "1.2.0", features = ["sync"] }
icu_provider_adapters = "1.2.0"
icu_provider_blob = "1.2.0"
icu_segmenter = { version = "1.2.1", features = ["serde"] }
kurbo = "0.9"
lipsum = "0.9"
log = "0.4"
once_cell = "1"
ciborium = "0.2.1"
roxmltree = "0.18"
rustybuzz = "0.7"
serde_json = "1"
serde_yaml = "0.9"
smallvec = "1.10"
syntect = { version = "5", default-features = false, features = ["parsing", "regex-fancy", "plist-load", "yaml-load"] }
time = { version = "0.3.20", features = ["formatting"] }
toml = { version = "0.8" }
tracing = "0.1.37"
ttf-parser = "0.19.2"
typed-arena = "2"
unicode-bidi = "0.3.13"
unicode-math-class = "0.1"
unicode-script = "0.5"
unicode-segmentation = "1"
