[package]
name = "typst-library"
description = "The standard library for Typst."
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
test = false
doctest = false
bench = false

[dependencies]
typst = { workspace = true }
az = { workspace = true }
chinese-number = { workspace = true }
ciborium = { workspace = true }
comemo = { workspace = true }
csv = { workspace = true }
ecow = { workspace = true }
hayagriva = { workspace = true }
hypher = { workspace = true }
icu_properties = { workspace = true }
icu_provider = { workspace = true }
icu_provider_adapters = { workspace = true }
icu_provider_blob = { workspace = true }
icu_segmenter = { workspace = true }
indexmap = { workspace = true }
kurbo = { workspace = true }
lipsum = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
roxmltree = { workspace = true }
rustybuzz = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
smallvec = { workspace = true }
syntect = { workspace = true }
time = { workspace = true }
toml = { workspace = true, features = ["display"] }
tracing = { workspace = true }
ttf-parser = { workspace = true }
typed-arena = { workspace = true }
unicode-bidi = { workspace = true }
unicode-math-class = { workspace = true }
unicode-script = { workspace = true }
unicode-segmentation = { workspace = true }
