[package]
name = "typst-syntax"
description = "Parser and syntax tree for Typst."
categories = ["compilers", "science"]
keywords = ["typst"]
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doctest = false
bench = false

[dependencies]
comemo = "0.3"
ecow = { version = "0.2", features = ["serde"] }
once_cell = "1"
serde = { version = "1.0.184", features = ["derive"] }
tracing = "0.1.37"
unicode-ident = "1.0"
unicode-math-class = "0.1"
unicode-segmentation = "1"
unscanny = "0.1"
