[package]
name = "typst-utils"
description = "Utilities for Typst."
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
once_cell = { workspace = true }
portable-atomic = { workspace = true }
rayon = { workspace = true }
rust_decimal = { version = "1.35.0", default-features = false }
siphasher = { workspace = true }
thin-vec = { workspace = true }

[lints]
workspace = true
