[package]
name = "typst-fuzz"
version.workspace = true
edition.workspace = true
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
typst = { workspace = true }
typst-assets = { workspace = true, features = ["fonts"] }
typst-pdf = { workspace = true }
typst-svg = { workspace = true }
typst-html = { workspace = true }
typst-render = { workspace = true }
typst-syntax = { workspace = true }
comemo = { workspace = true }
libfuzzer-sys = { workspace = true }

[[bin]]
name = "parse"
path = "src/bin/parse.rs"
test = false
doc = false

[[bin]]
name = "paged"
path = "src/bin/paged.rs"
test = false
doc = false

[[bin]]
name = "html"
path = "src/bin/html.rs"
test = false
doc = false
