[package]
name = "typst-codegen"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
native-tls = { workspace = true }
regex = { workspace = true }
scraper = { workspace = true }
ureq = { workspace = true }

[lints]
workspace = true
